<resources>
    <string name="app_name">Petcare Buddy</string>
    <string name="hello_title">Help your best friend</string>
    <string name="hello_welcome">Pet owners often face challenges in keeping a record of pet care activities, does it happen to you too? Welcome to PetCare Buddy, we will help you solve this problem!</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t you have an account? Sign Up</string>
    <string name="notification_description">Notification</string>
    <string name="home_title">How are your pets?</string>
    <string name="create_reminder">Create a Reminder</string>
    <string name="add_new_pet">Add a new Pet</string>
    <string name="reminders_log">Reminders log</string>
    <string name="tips">Tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_image_description">Pet Image</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="user_details">user_details</string>
    <string name="reminders">Reminders</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>