<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.home.HomeFragment">

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/notification"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:contentDescription="@string/notification_description"
            android:paddingStart="0dp"
            android:paddingEnd="100dp"
            android:src="@drawable/baseline_notifications_24" />

        <ImageButton
            android:id="@+id/emergencyBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:contentDescription="@string/emergency_button"
            android:src="@drawable/baseline_health_and_safety_24" />

        <ImageButton
            android:id="@+id/userBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:contentDescription="@string/user_details"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:src="@drawable/baseline_person_24" />

    </LinearLayout>

    <TextView
        android:textColor="@color/black"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/home_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/topContainer" />


    <HorizontalScrollView
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:id="@+id/petsChooser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <TableLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/createReminderBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.5"
                android:padding="16dp"
                android:text="@string/create_reminder" />


            <Button
                android:id="@+id/addNewPetBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_weight="0.5"
                android:padding="16dp"
                android:text="@string/add_new_pet" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/remindersLogBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="0.5"
                android:padding="16dp"
                android:text="@string/reminders_log" />

        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>